1.4.1
  - Update to katex.js 0.16.3

1.4.0
  - Update to katex.js 0.15.2
  - render_math_in_html() now works with `mathjax --katex` output

1.3.0
  - Add function render_math_in_html()

1.2.0
  - Better workaround for Windows encoding bug in R < 4.1.2: html
    output automatically gets escaped now on these versions of R.
    See https://bugs.r-project.org/show_bug.cgi?id=18152

1.1.0
  - Add 'html' class to output from katex_html() such that it gets
    automatically displayed in Rmarkdown.
  - Add workaround for Windows encoding bug in math_to_rd().
    The bug should be fixed in R for Windows 4.1.1.
  - Add a vignette with some examples

1.0.0:
  - CRAN release