@@ -1,5 +1,6 @@
 1.4.1
   - Update to katex.js 0.16.3
+  - Workaround htmltidy bug not allowing 'em' sizes in Rd files
 
 1.4.0
   - Update to katex.js 0.15.2
